# rust-elm

./: .gitignore  Cargo.toml  README.md  elm-watch.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
scripts/: postProcess.js
src/: Icons.elm  Main.elm  configuration.rs  dev_server.rs  flags.rs  global.d.ts  main.rs  main.ts
src/views/: index.hbs
