[package]
name = "rust-elm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4"
actix-web-actors = "4"
actix-files = "0.6"
handlebars = { version = "4.3.3", features = ["dir_source"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
tokio = "1.27.0"
notify = "5.1"
