[package]
name = "rust-elm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
handlebars = { version = "4.3.3", features = ["dir_source"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
dev = []
